[20260308][Tamnm]: update shift and shift Assgnment: adjust before create, before delete
