# src/modules/shift-assignment/dto/create.dto.ts
@@ -1,26 +1,41 @@
-import { IsMongoId, IsNotEmpty,IsString } from "class-validator";
+import { Type } from "class-transformer";
+import { Types } from "mongoose";
+import {
+  IsArray,
+  IsMongoId,
+  IsNotEmpty,
+  IsString,
+  ValidateNested,
+} from "class-validator";
+
 export class CreateShiftAssignmentDto {
-     @IsNotEmpty()
-     @IsMongoId()
-     shift_id:string;
 
-     @IsNotEmpty()
-     @IsMongoId()
-     user_id:string;
+  @IsNotEmpty()
+  @IsMongoId()
+  @Type(() => String)
+  shift_id!: Types.ObjectId;
 
-     @IsNotEmpty()
-     @IsString()
-     work_date:string;
+  @IsNotEmpty()
+  @IsMongoId()
+  @Type(() => String)
+  user_id!: Types.ObjectId;
 
-     @IsNotEmpty()
-     @IsMongoId()
-     assigned_by:string;
+  @IsNotEmpty()
+  @IsString()
+  work_date!: string;
 
-     constructor(shift_id:string,user_id:string,work_date:string,assigned_by:string){
-          this.shift_id=shift_id;
-          this.user_id=user_id;
-          this.work_date=work_date;
-          this.assigned_by=assigned_by;
-     }
-     
+  @IsNotEmpty()
+  @IsMongoId()
+  @Type(() => String)
+  assigned_by!: Types.ObjectId;
+}
+
+export class CreateShiftAssignmentItemsDto {
+
+  @IsNotEmpty()
+  @IsArray()
+  @ValidateNested({ each: true })
+  @Type(() => CreateShiftAssignmentDto)
+  items!: CreateShiftAssignmentDto[];
+
 }
