# src/modules/shift-assignment/dto/update.dto.ts
@@ -1,23 +1,7 @@
-import { IsEnum, IsMongoId, IsOptional, IsString } from "class-validator";
+import { IsEnum, IsNotEmpty } from "class-validator";
 import { ShiftAssignmentStatus } from "../../../core/enums/base.enum";
-export class UpdateShiftAssignmentDto {
-     @IsOptional()
-     @IsMongoId()
-     shift_id?:string;
-
-     @IsOptional()
-     @IsMongoId()
-     user_id?:string;
-
-     @IsOptional()
-     @IsString()
-     work_date?:string;
-
-     @IsOptional()
-     @IsMongoId()
-     assigned_by?:string;
-
-     @IsOptional()
+export class UpdateStatusDto {
+     @IsNotEmpty()
      @IsEnum(ShiftAssignmentStatus)
-     status?: ShiftAssignmentStatus;
+     status!: ShiftAssignmentStatus;
 }
